<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  <string name="hello">Hello World, MainActivity!</string>  -->
    <string name="app_name">MoneyBookBeta</string>
    
    <!-- surface -->
    <string name="reasonslist">reasons:</string>
    <string name="settings">settings</string>
    <string name="amount">amount</string>
    <string name="clear">clear</string>
    <string name="income">income</string>
    <string name="outgo">outgo</string>
    <string name="list">list</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>

</resources>